# django-finance

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  asgi.py  celery.py  env.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
contracts/: README.md  __init__.py
contracts/events/: README.md  __init__.py  base.py
docker/postgres/: init.sql
docs/: CHANGELOG.md  ENGINEERING_BASELINE.md  PLAN.md  PRODUCT_BASELINE.md  RELEASE.md  SUPPORT.md  TECH_STACK.md  admin.md  api-documentation.md  conventions.md  monitoring.md  performance.md  runbook.md  security-checklist.md  security.md
docs/decision-log/: 0001-adr-template.md  0002-tech-stack-selection.md  0003-b2c-saas-requirements.md  README.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/components/dashboard/: EmptyState.tsx  NetWorthCard.tsx  RecentTransactions.tsx  SocialFinanceSummary.tsx  StatsGrid.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Skeleton.tsx  index.ts
frontend/src/lib/api/: client.ts  index.ts  types.ts
frontend/src/lib/hooks/: useDashboard.ts
frontend/src/lib/utils/: format.ts  index.ts
frontend/src/styles/: globals.css
frontend/src/types/: finance.ts  index.ts  social.ts
locale/ar/LC_MESSAGES/: django.po
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fa/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/hi/LC_MESSAGES/: django.po
locale/hu/LC_MESSAGES/: django.po
locale/it/LC_MESSAGES/: django.po
locale/ja/LC_MESSAGES/: django.po
locale/ko/LC_MESSAGES/: django.po
locale/no/LC_MESSAGES/: django.po
locale/ur/LC_MESSAGES/: django.po
locale/zh_Hans/LC_MESSAGES/: django.po
modules/: README.md  __init__.py
modules/accounts/: __init__.py  tasks.py
modules/accounts/application/: __init__.py  dto.py  interfaces.py  use_cases.py
modules/accounts/domain/: __init__.py  entities.py  events.py  exceptions.py  services.py
modules/accounts/infrastructure/: __init__.py  admin.py  apps.py  backends.py  models.py
modules/accounts/infrastructure/migrations/: 0001_initial.py  0002_add_default_currency.py  __init__.py
modules/accounts/interfaces/: __init__.py  serializers.py  throttling.py  urls.py  views.py  web_urls.py  web_views.py
modules/demo/: __init__.py
modules/demo/infrastructure/: __init__.py  apps.py  models.py  tasks.py
modules/demo/infrastructure/migrations/: 0001_initial.py  __init__.py
modules/demo/interfaces/: __init__.py  consumers.py  urls.py  views.py
modules/finance/: __init__.py
modules/finance/application/: __init__.py  dto.py  interfaces.py  use_cases.py
modules/finance/domain/: __init__.py  entities.py  enums.py  events.py  exceptions.py  services.py  value_objects.py
modules/finance/infrastructure/: __init__.py  admin.py  apps.py  models.py
modules/finance/infrastructure/migrations/: 0001_initial.py  __init__.py
modules/finance/interfaces/: __init__.py  serializers.py  throttling.py  urls.py  views.py
modules/notifications/: __init__.py  signals.py  tasks.py
modules/notifications/domain/: __init__.py  entities.py  enums.py  services.py
modules/notifications/infrastructure/: __init__.py  admin.py  apps.py  models.py  repositories.py
modules/notifications/interfaces/: __init__.py  serializers.py  urls.py  views.py
modules/social/: __init__.py
modules/social/application/: __init__.py  dto.py  interfaces.py  use_cases.py
modules/social/domain/: __init__.py  entities.py  enums.py  events.py  exceptions.py  services.py
modules/social/infrastructure/: __init__.py  admin.py  apps.py  models.py  repositories.py
modules/social/interfaces/: __init__.py  serializers.py  urls.py  views.py
modules/subscriptions/: __init__.py
modules/subscriptions/application/: __init__.py
modules/subscriptions/domain/: __init__.py  enums.py  services.py
modules/subscriptions/infrastructure/: __init__.py  admin.py  apps.py  models.py
modules/subscriptions/interfaces/: __init__.py  serializers.py  urls.py  views.py
modules/web/: __init__.py  api_views.py  seo.py  urls.py  views.py
shared/: __init__.py  api_urls.py  apps.py  audit.py  exceptions.py  logging.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  views.py
shared/admin/: __init__.py  base.py  site.py
shared/consumers/: __init__.py  base.py  finance.py  health.py  social.py
shared/events/: __init__.py  handlers.py
shared/notifications/: __init__.py  service.py  types.py
templates/: robots.txt
templates/accounts/: login.html  password_reset.html  profile.html  register.html  settings.html
templates/admin/: audit_logs.html  dashboard_stats.html  finance_index.html
templates/base/: app.html  auth.html  base.html
templates/finance/: dashboard.html  net_worth.html
templates/finance/accounts/: detail.html  form.html  list.html
templates/finance/transactions/: detail.html  form.html  list.html
templates/notifications/: list.html
templates/react/: dashboard.html
templates/social/balances/: summary.html
templates/social/contacts/: detail.html  form.html  list.html
templates/social/debts/: detail.html  form.html  list.html
templates/social/groups/: detail.html  form.html  list.html
templates/social/settlements/: form.html  list.html
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_finance_api.py  test_websocket.py
tests/performance/: locustfile.py
tests/unit/: __init__.py
tests/unit/finance/: __init__.py  test_entities.py  test_services.py  test_value_objects.py
tests/unit/social/: __init__.py  test_entities.py  test_services.py
tests/unit/subscriptions/: __init__.py  test_permissions.py  test_serializers.py  test_services.py
(+4 files in other folders)
